tests/phppt/errors/capture_without_type.phppt
--TEST--
Capture tokens should always have an type
--FILE--
<?php

macro { ·foo } >> { foo }

?>
--EXPECTF--
Bad macro capture identifier '·foo' on line 3.
